--- a/api.yaml
+++ b/api.yaml
@@ -1,4 +1,4 @@
-openapi: "3.0.1"
+openapi: "3.0.3"
 info:
   title: dev-banking-api
   version: "1.0"
@@ -18,7 +18,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Account' 
+                $ref: '#/components/schemas/AccountResponse' 
     delete:
       tags:
         - Accounts
@@ -28,7 +28,7 @@ paths:
     parameters:
       - name: accountId
         in: path
-        description: Generated path parameter for accountId
+        description: Account ID
         required: true
         schema:
           type: string
@@ -44,10 +44,14 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Account'
+                  $ref: '#/components/schemas/AccountResponse'
     post:
       tags:
         - Accounts
+      parameters:
+        - $ref: '#/components/parameters/Quantity'
+      requestBody:
+        $ref: '#/components/requestBodies/AccountRequest'
       responses:
         201:
           description: An array of the newly created accounts
@@ -56,7 +60,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Account'
+                  $ref: '#/components/schemas/AccountResponse'
     delete:
       tags:
         - Accounts
@@ -66,7 +70,7 @@ paths:
     parameters:
       - name: customerId
         in: path
-        description: Generated path parameter for customerId
+        description: Customer ID
         required: true
         schema:
           type: string
@@ -82,10 +86,14 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Transaction'
+                  $ref: '#/components/schemas/TransactionResponse'
     post:
       tags:
         - Transactions
+      parameters:
+        - $ref: '#/components/parameters/Quantity'
+      requestBody:
+        $ref: '#/components/requestBodies/TransactionRequest'
       responses:
         201:
           description: An array of the newly created Transactions
@@ -94,11 +102,11 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Transaction'
+                  $ref: '#/components/schemas/TransactionResponse'
     parameters:
       - name: accountId
         in: path
-        description: Generated path parameter for accountId
+        description: Account ID
         required: true
         schema:
           type: string
@@ -114,10 +122,14 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Customer'
+                  $ref: '#/components/schemas/CustomerResponse'
     post:
       tags:
         - Customers
+      parameters:
+        - $ref: '#/components/parameters/Quantity'
+      requestBody:
+        $ref: '#/components/requestBodies/CustomerRequest'
       responses:
         201:
           description: The newly created customers
@@ -126,7 +138,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Customer'
+                  $ref: '#/components/schemas/CustomerResponse'
         400:
           description: Bad Request
   /customers/{customerId}:
@@ -139,11 +151,11 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Customer'
+                $ref: '#/components/schemas/CustomerResponse'
     parameters:
       - name: customerId
         in: path
-        description: Generated path parameter for customerId
+        description: Customer ID
         required: true
         schema:
           type: string
@@ -157,11 +169,11 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Transaction'
+                $ref: '#/components/schemas/TransactionResponse'
     parameters:
       - name: transactionId
         in: path
-        description: Generated path parameter for transactionId
+        description: Transaction ID
         required: true
         schema:
           type: string
@@ -171,13 +183,59 @@ components:
     cognito-auth:
       type: http
       scheme: bearer
+  parameters:
+    Quantity:
+      in: query
+      name: quantity
+      schema:
+        type: integer
+        default: 1
+        minimum: 1
+        maximum: 25
+      description: The quantity to create, if custom data not being specified in body. This value will be ignored if custom data is passed in the body.
+  requestBodies:
+    CustomerRequest:
+      description: Custom fields to use for creating new customers. If an empty body is passed, all attributes of all new customers will be randomized. Any omitted properties will be randomized.
+      content:
+        application/json:
+          schema:
+            type: array
+            minItems: 1
+            maxItems: 25
+            items:
+              $ref: '#/components/schemas/CustomerRequest'
+    AccountRequest:
+      description: Custom fields to use for creating new accounts. If an empty body is passed, all attributes of all new accounts will be randomized. Any omitted properties will be randomized.
+      content:
+        application/json:
+          schema:
+            type: array
+            minItems: 1
+            maxItems: 25
+            items:
+              $ref: '#/components/schemas/AccountRequest'
+    TransactionRequest:
+      description: Custom fields to use for creating new transactions. If an empty body is passed, all attributes of all new transactions will be randomized. Any omitted properties will be randomized.
+      content:
+        application/json:
+          schema:
+            type: array
+            minItems: 1
+            maxItems: 25
+            items:
+              $ref: '#/components/schemas/TransactionRequest'
   schemas:
-    Customer:
+    CustomerResponse:
+        allOf:
+          - type: object
+            properties:
+              customerId:
+                type: string
+                example: 4luMm6f6sbPZLnYHEDjttM
+          - $ref: '#/components/schemas/CustomerRequest'
+    CustomerRequest:
       type: object
       properties:
-        customerId: 
-          type: string
-          example: 4luMm6f6sbPZLnYHEDjttM
         firstName:
           type: string
           example: George
@@ -207,15 +265,20 @@ components:
         country:
           type: string
           example: United Kingdom
-    Account:
+    AccountResponse:
+      allOf:
+        - type: object
+          properties:
+            accountId:
+              type: string
+              example: 3YaeOYszLHL28ldk1AyArO
+            customerId:
+              type: string
+              example: 4luMm6f6sbPZLnYHEDjttM
+        - $ref: '#/components/schemas/AccountRequest'
+    AccountRequest:
       type: object
       properties:
-        accountId:
-          type: string
-          example: 3YaeOYszLHL28ldk1AyArO
-        customerId:
-          type: string
-          example: 4luMm6f6sbPZLnYHEDjttM
         balance:
           type: number
           example: 12.34
@@ -225,15 +288,20 @@ components:
             - Current
             - Savings
           example: Current
-    Transaction:
+    TransactionResponse:
+      allOf:
+        - type: object
+          properties:
+            transactionId:
+              type: string
+              example: 2IoHkRtvooFD5MDTsiY4Gt
+            accountId:
+              type: string
+              example: 3YaeOYszLHL28ldk1AyArO
+        - $ref: '#/components/schemas/TransactionRequest'
+    TransactionRequest:
       type: object
       properties:
-        transactionId:
-          type: string
-          example: 2IoHkRtvooFD5MDTsiY4Gt
-        accountId:
-          type: string
-          example: 3YaeOYszLHL28ldk1AyArO
         amount:
           type: number
           example: -12.34
