--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@types/jest": "^27.0.2",
+    "aws-sdk-client-mock": "^0.5.5",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "serverless": "^2.60.0",
