--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test:unit": "jest src",
+    "test:integration": "npm run local-dynamodb:start && jest test/integration --config test/integration/jest.config.js && npm run local-dynamodb:stop",
+    "test:integration:keep": "npm run local-dynamodb:start && jest test/integration --config test/integration/jest.config.js",
+    "local-dynamodb:start": "docker compose -f test/integration/docker-compose.yml up -d",
+    "local-dynamodb:stop": "docker compose -f test/integration/docker-compose.yml down"
   },
   "author": "",
   "license": "ISC",
@@ -21,8 +25,8 @@
     "serverless-plugin-include-dependencies": "^5.0.0"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.34.0",
-    "@aws-sdk/lib-dynamodb": "^3.34.0",
+    "@aws-sdk/client-dynamodb": "^3.37.0",
+    "@aws-sdk/lib-dynamodb": "^3.37.0",
     "axios": "^0.21.4",
     "base-x": "^3.0.8",
     "currency.js": "^2.0.4",
