--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           node-version: '14'
 
+      - name: Install Dependencies
+        run: npm ci
+
       - name: Unit Test
         run: npm run test:unit
 
