--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,8 @@ on:
       - master
   pull_request:
     branches:
-     - master
-  workflow_dispatch:
+      - master
+  workflow_dispatch: # enables manual builds
 
 jobs:
   build:
