--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test:unit": "jest src",
     "test:integration": "npm run local-dynamodb:start && jest test/integration --config test/integration/jest.config.js ; npm run local-dynamodb:stop",
     "test:integration:keep": "npm run local-dynamodb:start && jest test/integration --config test/integration/jest.config.js",
+    "test:system": "cucumber-js test/system/features --publish-quiet",
     "local-dynamodb:start": "docker compose -f test/integration/docker-compose.yml up -d",
     "local-dynamodb:stop": "docker compose -f test/integration/docker-compose.yml down",
     "package": "serverless package",
@@ -18,10 +19,12 @@
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
+    "@cucumber/cucumber": "*",
     "@types/jest": "^27.0.2",
     "aws-sdk-client-mock": "^0.5.5",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
+    "pactum": "^3.0.21",
     "serverless": "^2.60.0",
     "serverless-bundle": "^5.0.2",
     "serverless-domain-manager": "^5.1.5",
