--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
-    "@cucumber/cucumber": "*",
+    "@cucumber/cucumber": "^7.3.1",
     "@types/jest": "^27.0.2",
     "aws-sdk-client-mock": "^0.5.5",
     "babel-jest": "^26.6.3",
