--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^27.0.2",
     "aws-sdk-client-mock": "^0.5.5",
     "babel-jest": "^26.6.3",
+    "hamjest": "^3.7.2",
     "jest": "^26.6.3",
     "serverless": "^2.60.0",
     "serverless-bundle": "^5.0.2",
