--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "serverless": "^2.60.0",
     "serverless-bundle": "^5.0.2",
     "serverless-domain-manager": "^5.1.5",
-    "serverless-plugin-include-dependencies": "^5.0.0"
+    "serverless-plugin-include-dependencies": "^5.0.0",
+    "serverless-plugin-lambda-insights": "^1.0.10"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.37.0",
