--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "test:unit": "jest src",
     "test:integration": "npm run local-dynamodb:start && jest test/integration --config test/integration/jest.config.js --runInBand ; npm run local-dynamodb:stop",
     "test:integration:keep": "npm run local-dynamodb:start && jest test/integration --config test/integration/jest.config.js --runInBand",
@@ -23,6 +24,10 @@
     "@types/jest": "^27.0.2",
     "aws-sdk-client-mock": "^0.5.5",
     "babel-jest": "^26.6.3",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
     "hamjest": "^3.7.2",
     "jest": "^26.6.3",
     "serverless": "^2.60.0",
