--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:integration": "npm run local-dynamodb:start && jest test/integration --config test/integration/jest.config.js --runInBand ; npm run local-dynamodb:stop",
     "test:integration:keep": "npm run local-dynamodb:start && jest test/integration --config test/integration/jest.config.js --runInBand",
     "test:system": "cucumber-js test/system/features --publish-quiet",
-    "local-dynamodb:start": "docker compose -f test/integration/docker-compose.yml up -d",
+    "local-dynamodb:start": "docker compose -f test/integration/docker-compose.yml up -d --quiet-pull",
     "local-dynamodb:stop": "docker compose -f test/integration/docker-compose.yml down",
     "package": "serverless package",
     "deploy-only": "serverless deploy -p .serverless",
