--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-import": "^2.25.2",
     "hamjest": "^3.7.2",
     "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
     "serverless": "^2.60.0",
     "serverless-bundle": "^5.0.2",
     "serverless-domain-manager": "^5.1.5",
